--- a/bootstrap.html
+++ b/bootstrap.html
@@ -7,9 +7,8 @@
 	</head>
 	
 	<body>
-		<button  > OK </button>
-		<button class="btn btn-primary" > OK </button>
-		<button class="btn btn-danger" > OK </button>
-		<script type="text/javascript" src="bootstrap/js/bootstrap.min.js" charset="utf-8" ></script>
+		
+		
+		<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
